lesson 4 from video

--- a/server/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/server/mainapp/templates/mainapp/includes/inc_menu.html
@@ -3,7 +3,7 @@
         <img class="logo" src="{% static 'img/logo.png' %}" alt="logo">
         <ul class="menu">
                <li><a href="{% url 'index' %}">Главная</a><br></li>
-               <li><a href="{% url 'products:products' %}">Каталог</a></li>
+               <li><a href="{% url 'products:index' %}">Каталог</a></li>
                <li><a href="{% url 'contact' %}">Контакты</a></li>
         </ul>
  </div>
