--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 {% block content %}
 <div class="content">
+    <a href="{% url 'products:add' %}">Добавить товар</a>
     <hr>
     <ul class="menu">
         {% for category in categorys %}
