--- a/geekshop_project/products/templates/products/category_detail.html
+++ b/geekshop_project/products/templates/products/category_detail.html
@@ -6,6 +6,8 @@
             <hr>
             <h1>{{ category.name }}</h1>
             <p>{{ category.description }}</p>
+            <a href="{% url 'products:category_update' pk=category.id %}">Обновить</a>
+            <a href="{% url 'products:category_delete' pk=category.id %}">Удалить   </a>
             <hr>
         
 {% endblock content %}
