--- a/geekshop_project/products/templates/products/add.html
+++ b/geekshop_project/products/templates/products/add.html
@@ -3,15 +3,7 @@
 {% block content %}
 <div class='content'>
     <h1>Добавить продукт</h1>
-    <form method="POST" action="">
-        {% csrf_token %}
-        {% for field in form %}
-        <div>
-            {{ field }}
-        </div>
-        {% endfor %}
-        <input type="submit">
-    </form>
+    {% include "components/form.html" %}
 </div>
 
 {% endblock content %}
