--- a/geekshop_project/products/templates/products/category_add.html
+++ b/geekshop_project/products/templates/products/category_add.html
@@ -2,16 +2,8 @@
 {% load staticfiles %}
 {% block content %}
 <div class='content'>
-    <h1>Добавить продукт</h1>
-    <form method="POST" action="">
-        {% csrf_token %}
-        {% for field in form %}
-        <div>
-            {{ field }}
-        </div>
-        {% endfor %}
-        <input type="submit">
-    </form>
+    <h1>Добавить категорию</h1>
+    {% include "components/form.html" %}
 </div>
 
 {% endblock content %}
