--- a/geekshop_project/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/geekshop_project/mainapp/templates/mainapp/includes/inc_menu.html
@@ -2,9 +2,9 @@
 <div class="header">
         <img class="logo" src="{% static 'img/logo.png' %}" alt="logo">
         <ul class="menu">
-               <li><a href="{% url 'index' %}">Главная</a><br></li>
-               <li><a href="{% url 'products:index' %}">Продукты</a></li>
-               <li><a href="{% url 'products:category_list' %}">Категории</a></li>
                <li><a href="{% url 'contact' %}">Контакты</a></li>
+               <li><a href="{% url 'product:list' %}">Продукты</a></li>
+               <li><a href="{% url 'category:list' %}">Категории</a></li>
+               <li><a href="{% url 'index' %}">Главная</a><br></li>
         </ul>
  </div>
