--- a/geekshop_project/products/templates/product/list.html
+++ b/geekshop_project/products/templates/product/list.html
@@ -1,23 +1,16 @@
 {% extends "mainapp/base.html" %}
 {% load staticfiles %}
 {% block content %}
+<hr>
 <div class="content">
     <a href="{% url 'products:add' %}">Добавить продукт</a>
-    <hr>
     <h1>{{title}}</h1>
 
     {% for product in object_list %}
-    <div class="block">
-        <img src="/media/{{ product.image }}" width=50% alt="{{ product.short_desc }}">
-        <div class="text">
-            <a href="{% url 'products:detail' pk=product.id %}">
-                <h4>{{ product.name }}</h4>
-            </a>
-            <p>{{ product.description }}</p>
-        </div>
-    </div>
+        {% include "components/product_item.html" with product=product %}
     {% endfor %}
+    
     {% include "components/pagination.html" with page=page_obj %}
-    <hr>
-
-    {% endblock content %}
+</div>
+<hr>
+{% endblock content %}
