make little fix

--- a/geekshop_project/authapp/templates/authapp/login.html
+++ b/geekshop_project/authapp/templates/authapp/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='content'>
     <h1>Login</h1>
-    {% include "components/form.html" with form=form %}
+    {% include "components/form.html" with button_name="Войти" %}
 </div>
 
 {% endblock content %}
