--- a/geekshop_project/authapp/templates/authapp/registration.html
+++ b/geekshop_project/authapp/templates/authapp/registration.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class='content'>
     <h1>Регистрация</h1>
-    {% include "components/form.html" with form=form %}
+    {% include "components/form.html" with button_name="Зарегистрироваться" %}
 </div>
 
 {% endblock content %}
