--- a/geekshop_project/products/templates/category/delete.html
+++ b/geekshop_project/products/templates/category/delete.html
@@ -2,12 +2,8 @@
 {% load staticfiles %}
 {% block content %}
 <div class='content'>
-    <h1>Удалить категорию?</h1>
-    <form method="POST" action="">
-        Категория <b>{{ object.name }}</b> будет удалена, вы уверены?
-        {% csrf_token %}
-        <input type="submit">
-    </form>
+    <h1>Удалить категорию {{ object.name }}?</h1>
+    {% include "components/form.html" with button_name="Удалить" %}
 </div>
 
 {% endblock content %}
